<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="15dp">

    <com.google.android.material.textview.MaterialTextView
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/string_testing_components" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_style_1_text_appearance"
        style="@style/switchStyle"/>

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_style_2_compound_button"
        style="@style/switchStyle2"/>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButtonONE"
        style="@style/toggleButtonStyle"/>

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButtonTWO" />

    <Button
        android:id="@+id/buttonValidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate_button" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="8dp"
        android:text="" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/progress_bar" />

    <ProgressBar
        android:id="@+id/progressBarCircle"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressBarLine"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:max="100"
        android:progress="1"/>

    <Button
        android:id="@+id/buttonProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonProgressBar"
        android:text="@string/validate_progress_bar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/seekbar" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:max="10"
        android:progress="1"/>

    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:max="10"
        android:progress="1" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="8dp"
        android:text="" />
</LinearLayout>
